--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "data_structs.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "second_chance.h": "c",
+        "table.h": "c",
+        "fifo.h": "c",
+        "macros.h": "c",
+        "linked_list.h": "c"
     }
 }
